--- a/thesis.tex
+++ b/thesis.tex
@@ -37,7 +37,7 @@
 \renewcommand*\contentsname{Table of Contents}
 \renewcommand*\listfigurename{List of Figures}
 \renewcommand*\listtablename{List of Tables}
-\renewcommand*\lstlistlistingname{List of Code Listings}
+\renewcommand*\lstlistlistingname{List of Code}
 % ******************************** Front Matter ********************************
 \begin{document}
 
@@ -54,7 +54,7 @@
 \tableofcontents
 \listoffigures
 \listoftables
-\addcontentsline{toc}{chapter}{List of Code Listings} % add list of listing to content
+\addcontentsline{toc}{chapter}{List of Code} % add list of listing to content
 \lstlistoflistings
 
 %\printnomenclature[space] space can be set as 2em between symbol and description
